feat: 1) Add name to document version, change endpoint AddDocumentVersion, add migration 2) Add draft component, change document header for document, document version and document draft
